# ESP32_WifiManager

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old
components/wifiManager/: CMakeLists.txt  Kconfig
components/wifiManager/Inc/: wifiManager.h  wifiManager_private.h  wm_button.h  wm_generalMacros.h  wm_httpServer.h  wm_nvs.h  wm_wifi.h
components/wifiManager/Src/: wifiManager.c  wm_button.c  wm_httpServer.c  wm_nvs.c  wm_wifi.c
components/wifiManager/Web/: app.js
main/: main.c
